vlib/v/checker/tests/with_check_option/empty_global_const.out
vlib/v/checker/tests/with_check_option/empty_global_const.vv:5:10: notice: script mode started here
    3 | const buf_len = 256
    4 | 
    5 | __global not_used_in_code_but_helps_triggering = u64(-1)
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6 | 
    7 | struct Buffer {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:5:1: error: use `v -enable-globals ...` to enable globals
    3 | const buf_len = 256
    4 | 
    5 | __global not_used_in_code_but_helps_triggering = u64(-1)
      | ~~~~~~~~
    6 | 
    7 | struct Buffer {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:7:8: error: all definitions must occur before code in script mode
    5 | __global not_used_in_code_but_helps_triggering = u64(-1)
    6 | 
    7 | struct Buffer {
      |        ~~~~~~
    8 | mut:
    9 |     data [256]u8
vlib/v/checker/tests/with_check_option/empty_global_const.vv:8:1: error: the `mut` keyword is invalid here
    6 | 
    7 | struct Buffer {
    8 | mut:
      | ~~~
    9 |     data [256]u8
   10 |     pos  int
vlib/v/checker/tests/with_check_option/empty_global_const.vv:9:2: error: unexpected name `data`, expecting `:`
    7 | struct Buffer {
    8 | mut:
    9 |     data [256]u8
      |     ~~~~
   10 |     pos  int
   11 | }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:10:7: error: unexpected name `int`, expecting `:`
    8 | mut:
    9 |     data [256]u8
   10 |     pos  int
      |          ~~~
   11 | }
   12 |
vlib/v/checker/tests/with_check_option/empty_global_const.vv:11:1: error: invalid expression: unexpected token `}`
    9 |     data [256]u8
   10 |     pos  int
   11 | }
      | ^
   12 | 
   13 | fn (mut buf Buffer) clear() {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:13:26: error: unexpected token `(` after anonymous function signature, expecting `{`
   11 | }
   12 | 
   13 | fn (mut buf Buffer) clear() {
      |                          ^
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:13:27: error: unexpected token `)`, expecting `:`
   11 | }
   12 | 
   13 | fn (mut buf Buffer) clear() {
      |                           ^
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:14:10: error: unexpected token `=`, expecting `:`
   12 | 
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
      |             ^
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:2: error: invalid expression: unexpected keyword `for`
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |     ~~~
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:6: error: unexpected name `i`, expecting `:`
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |         ^
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:8: error: invalid expression: unexpected keyword `in`
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |           ~~
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:13: error: unexpected token `..`, expecting `:`
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |                ~~
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:16: error: struct name must begin with capital letter
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |                   ~~~~~~~
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:16:15: error: unexpected token `=`, expecting `:`
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
      |                     ^
   17 |     }
   18 | }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:5:10: error: undefined ident: `not_used_in_code_but_helps_triggering` (use `:=` to declare a variable)
    3 | const buf_len = 256
    4 | 
    5 | __global not_used_in_code_but_helps_triggering = u64(-1)
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    6 | 
    7 | struct Buffer {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:5:50: error: cannot assign to `not_used_in_code_but_helps_triggering`: expected `void`, not `u64`
    3 | const buf_len = 256
    4 | 
    5 | __global not_used_in_code_but_helps_triggering = u64(-1)
      |                                                  ~~~~~~~
    6 | 
    7 | struct Buffer {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:1:1: error: undefined ident: ``
    1 | module main
      | ^
    2 | 
    3 | const buf_len = 256
vlib/v/checker/tests/with_check_option/empty_global_const.vv:10:2: error: undefined ident: `pos`
    8 | mut:
    9 |     data [256]u8
   10 |     pos  int
      |     ~~~
   11 | }
   12 |
vlib/v/checker/tests/with_check_option/empty_global_const.vv:11:1: error: invalid map value: expected `[256]u8`, not `void`
    9 |     data [256]u8
   10 |     pos  int
   11 | }
      | ^
   12 | 
   13 | fn (mut buf Buffer) clear() {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:13:1: error: anonymous function must declare a body
   11 | }
   12 | 
   13 | fn (mut buf Buffer) clear() {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:13:13: error: unknown type `Buffer`
   11 | }
   12 | 
   13 | fn (mut buf Buffer) clear() {
      |             ~~~~~~
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:14:2: error: undefined ident: `buf`
   12 | 
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
      |     ~~~
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
vlib/v/checker/tests/with_check_option/empty_global_const.vv:14:6: error: `buf` does not return a value
   12 | 
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
      |         ~~~
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:8: error: invalid map value: expected `int`, not `void`
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |           ~~
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:15:11: error: invalid map key: expected `void`, not `int literal`
   13 | fn (mut buf Buffer) clear() {
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
      |              ^
   16 |         buf.data[i] = 0
   17 |     }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:1:1: error: invalid map value: expected `int`, not `void`
    1 | module main
      | ^
    2 | 
    3 | const buf_len = 256
vlib/v/checker/tests/with_check_option/empty_global_const.vv:16:3: error: undefined ident: `buf`
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
      |         ~~~
   17 |     }
   18 | }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:16:7: error: `buf` does not return a value
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
      |             ~~~~
   17 |     }
   18 | }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:16:11: error: type `void` does not support indexing
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
      |                 ~~~
   17 |     }
   18 | }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:16:12: error: undefined ident: `i`
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
   16 |         buf.data[i] = 0
      |                  ^
   17 |     }
   18 | }
vlib/v/checker/tests/with_check_option/empty_global_const.vv:13:1: error: invalid map key: expected `void`, not `fn (mut Buffer) clear`
   11 | }
   12 | 
   13 | fn (mut buf Buffer) clear() {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:13:29: error: invalid map value: expected `[256]u8`, not `map[void]int`
   11 | }
   12 | 
   13 | fn (mut buf Buffer) clear() {
      |                             ^
   14 |     buf.pos = 0
   15 |     for i in 0 .. buf_len {
vlib/v/checker/tests/with_check_option/empty_global_const.vv:9:7: warning: use e.g. `x := [1]Type{}` instead of `x := [1]Type`
    7 | struct Buffer {
    8 | mut:
    9 |     data [256]u8
      |          ~~~~~~~
   10 |     pos  int
   11 | }
